# offline-ai

./: AndroidManifest.xml  CMakeLists.txt  build.gradle.kts  build.yml  native-lib.cpp  settings.gradle.kts
